Fix horizontal scroll bar showing

--- a/resources/public/common/widget.css
+++ b/resources/public/common/widget.css
@@ -19,12 +19,9 @@
 .widget {
     font-size: 1rem;
     box-sizing: border-box;
-    display: inline-block;
     padding: 10px;
     position: relative;
     z-index: 0;
-    /* https://css-tricks.com/fighting-the-space-between-inline-block-elements/ */
-    margin-right: -4px;
 }
 .widget:hover:not(:target) {
     background-color: #f7f7f7;
